项目经验、技术栈、能力等修改

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <h2>技术栈</h2>
             <!--内容要修改-->
             <div id="wrapper--techstack__items">
-                <div class="card--techstack"><span>Python, JavaScript, NodeJS</span></div>
-                <div class="card--techstack"><span>Django, Express, Flask, FastAPI</span></div>
+                <div class="card--techstack"><span>JavaScript</span></div>
+                <div class="card--techstack"><span>Node.js，Express</span></div>
                 <div class="card--techstack"><span>React, Next JS</span></div>
-                <div class="card--techstack"><span>Postgres, MongoDB, MySQL</span></div>
+                <div class="card--techstack"><span>MySQL，Git</span></div>
             </div>
         </section>
 
@@ -55,21 +55,20 @@
         <section id="projects-wrapper" class="section--page">
             <h2>项目经验</h2>
             <div class="card--project-history">
-                <strong>项目名</strong>
-                <p>项目介绍</p>
+                <strong>E-commerce website</strong>
+                <p>React + React Router + React Redux + Sass + Axios + Strapi + MySQL</p>
                 <ul>
-                    <li>详细1</li>
-                    <li>详细2</li>
-                    <li>详细3</li>
+                    <li>使用 React.js 构建多个可复用的组件，React Router 实现前端路由，保持网站结构的清晰和易于导航。</li>
+                    <li>使用Redux管理应用的状态和数据流，允许添加和删除购物车商品，实时计算总金额。</li>
+                    <li>使用Chrome 开发者工具和 Redux DevTools 进行调试，定位并解决了前端代码中的问题。</li>
                 </ul>
             </div>
             <div class="card--project-history">
-                <strong>项目名</strong>
-                <p>项目介绍</p>
+                <strong>图书管理网站</strong>
+                <p>React + Node.js + Express + MySQL</p>
                 <ul>
-                    <li>详细1</li>
-                    <li>详细2</li>
-                    <li>详细3</li>
+                    <li>使用MySQL数据库来存储图书信息。每本图书包含书名、作者、介绍等基本信息</li>
+                    <li>使用Express框架，运行后端环境，处理来自前端的请求，并进行数据库操作。</li>
                 </ul>
             </div>
         </section>
